- BUG: When the recursive overlay was activated, the
       overlays for folders weren't shown recursive if
       the explorer columns weren't sorted by name. (Stefan)

Version 0.26
- ADD: The columns in the progress and the commit dialog 
       are now sortable. (Stefan)
- ADD: It's possible now to drag on the locatorbar
       in TME. (Stefan)
- ADD: TME now shows ToolTips for the filenames in
       each view to make it easier to see the
       full path. (Stefan)
- ADD: New context menu to open files with the
       default application in the commit dialog. (Stefan)
- ADD: By placing a '#' in front of the paths for the
       external diff/merge programs make TSVN use
       it's own program TortoiseMerge. This helps
       users who want to switch easily between
       two different programs. (Stefan)
- ADD: german translation of the TSVN docs. (Stefan)
- ADD: the helpfile is chosen according to the
       selected language. (Stefan)
- ADD: Configurable font and fontsize in TME. (Stefan)
- ADD: Configurable font and fontsize for log messages
       in TSVN. (Stefan)
- BUG: Log messages could be shown with an additional
       empty line between the normal lines. (Stefan)
- BUG: The filepaths in the log messages were
       shown twice. (Stefan)       
- BUG: If a difference was only one line then
       TME skipped that when it should have gone
       there on file load. (Stefan)
- BUG: Filenames with ";" in it could not be
       committed. (Stefan)
- BUG: The groupbox text was shown black in the
       settings dialog on some systems. (Stefan)

Version 0.25
- ADD: TME shows the differences in whitespaces
       inside a line too. (Stefan)
- ADD: New option to not convert files before
       diffing with BASE. (Stefan)
- ADD: By pressing F5 in the commit dialog you
       can refresh the file list. (Stefan)
- CHG: Enable the left view on loading files
       in TME. (Stefan)
- CHG: Use a fixed width font for log messages as