@@ -1050,6 +1050,7 @@ END
 STRINGTABLE 
 BEGIN
     IDS_LOG_COMPAREWITHBASE "Compare with Base..."
+    IDS_LOG_BROWSEREPO      "Browse Repository..."
 END
 
 STRINGTABLE 
