@@ -38,6 +38,7 @@
 #define ID_REVERT	   10
 #define	ID_REFRESH	   11
 #define ID_OPEN		   12
+#define ID_REPOBROWSE  13
 
 #define ID_DIFF			20
 
