@@ -1,3 +1,6 @@
+- ADD: From the log dialog it's now possible to start
+       the repository browser so it browses the
+       selected revision. (Stefan)
 - BUG: When the recursive overlay was activated, the
        overlays for folders weren't shown recursive if
        the explorer columns weren't sorted by name. (Stefan)
